Add the explicit log4j2.formatMsgNoLookups=true config to es7
Also the used version of es7 needs the explicit setting
to avoid vulnerability to the log4j CVE-2021-44228 issue.

--- a/elasticsearch7/Dockerfile
+++ b/elasticsearch7/Dockerfile
@@ -6,6 +6,11 @@ RUN yum install -y netcat vim
 RUN yum install -y openssh-clients
 
 COPY elasticsearch.yml /usr/share/elasticsearch/config/
+
+# For version 7.9.0 of the elasticsearch-oss image, 
+# we explictly add the following setting
+# to avoid the Log4J vulnerability.
+RUN echo '-Dlog4j2.formatMsgNoLookups=true' >> /usr/share/elasticsearch/config/jvm.options
 COPY logging.yml /usr/share/elasticsearch/config/
 COPY *.sh /bin/
 
